@@ -1,4 +1,4 @@
-noinst_PROGRAMS = test-eglib test-glib
+noinst_PROGRAMS = test-eglib
 
 SOURCES = \
 	test.c 		\
@@ -28,21 +28,30 @@ SOURCES = \
 	module.c
 
 test_eglib_SOURCES = $(SOURCES)
-test_glib_SOURCES = $(SOURCES)
 
 test_eglib_CFLAGS = -Wall -Werror -D_FORTIFY_SOURCE=2 -I$(srcdir)/../src -DDRIVER_NAME=\"EGlib\"
 test_eglib_LDADD = ../src/libeglib.la -ldl
 
+run-eglib: all
+	./test-eglib
+
+if HAVE_GLIB
+noinst_PROGRAMS += test-glib
+
+test_glib_SOURCES = $(SOURCES)
+
 test_glib_CFLAGS = `pkg-config --cflags glib-2.0` -DDRIVER_NAME=\"GLib\"
 test_glib_LDFLAGS = `pkg-config --libs glib-2.0 gmodule-2.0`
-
-MAINTAINERCLEANFILES = Makefile.in
 
 run-glib: all
 	./test-glib
 
-run-eglib: all
-	./test-eglib
-
 run-both: run-glib run-eglib
 
+else
+
+run-both: run-eglib
+
+endif
+
+MAINTAINERCLEANFILES = Makefile.in
